package Ejercicio;

public class Profesor {
}
