package ej1;

public class Estudiante extends Persona{
}
