package com.app;

public class Tutor extends Estudiante{
    
}
